Fixed masonry layout issue with external package

--- a/static/global.css
+++ b/static/global.css
@@ -23,6 +23,11 @@ body {
 	display: flex;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 h1 {
 	font-family: 'Space Grotesk', sans-serif;
 }
